<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/test"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        android:layout_margin="@dimen/card_margin"
        card_view:cardCornerRadius="@dimen/cardCornerRadius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/card_img"
                android:layout_width="@dimen/thumbnail_size"
                android:layout_height="@dimen/thumbnail_size"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/logo"/>
            <TextView
                android:id="@+id/card_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/subtitle_marginTop"
                android:layout_marginStart="@dimen/subtitle_marginLeft"
                android:layout_marginLeft="@dimen/subtitle_marginLeft"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/card_img"
                android:layout_toLeftOf="@id/card_img"
                android:text="@string/subtitle"
                android:textSize="@dimen/subtitle_size"/>
            <TextView
                android:id="@+id/card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/title_marginLeft"
                android:layout_marginLeft="@dimen/title_marginLeft"
                android:layout_below="@+id/card_subtitle"
                android:text="@string/title"
                android:textSize="@dimen/title_size"/>
            <View style="@style/HorizontalDivider"
                android:id="@+id/card_divider"
                android:layout_below="@id/card_img"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/card_divider">
                <TextView
                    android:id="@+id/card_action1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/action_button_marginLeft"
                    android:layout_marginLeft="@dimen/action_button_marginLeft"
                    android:gravity="center"
                    android:text="@string/action1"
                    android:textSize="@dimen/action_text_size"/>
                <TextView
                    android:id="@+id/card_level_action"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/action_button_marginLeft"
                    android:layout_marginLeft="@dimen/action_button_marginLeft"
                    android:gravity="center"
                    android:text="@string/action2"
                    android:textSize="@dimen/action_text_size"/>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>