<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/cardView"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    android:layout_margin="@dimen/card_margin"
    card_view:cardCornerRadius="@dimen/cardCornerRadius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/card_thumbnail"
            android:layout_width="@dimen/thumbnail_size"
            android:layout_height="@dimen/thumbnail_size"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/logo"/>
        <TextView
            android:id="@+id/card_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/subtitle_marginTop"
            android:layout_marginStart="@dimen/subtitle_marginLeft"
            android:layout_marginLeft="@dimen/subtitle_marginLeft"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/card_thumbnail"
            android:layout_toLeftOf="@id/card_thumbnail"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/subtitle"
            android:textSize="@dimen/subtitle_size"/>
        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/title_marginLeft"
            android:layout_marginLeft="@dimen/title_marginLeft"
            android:layout_below="@+id/card_subtitle"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/title"
            android:textSize="@dimen/title_size"/>
        <View style="@style/HorizontalDivider"
            android:id="@+id/card_divider"
            android:layout_below="@id/card_thumbnail"
            android:background="@color/colorPrimaryDark"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_field_height"
            android:weightSum="10"
            android:layout_below="@id/card_divider">
            <TextView
                android:id="@+id/card_action1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/action_button_marginLeft"
                android:layout_marginLeft="@dimen/action_button_marginLeft"
                android:gravity="center_vertical"
                android:layout_weight="9"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/action1"
                android:textSize="@dimen/action_text_size"/>
            <View style="@style/VerticalDivider"
                android:id="@+id/action_divider"
                android:background="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/card_action2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/action2"
                android:textSize="@dimen/action_text_size"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>