<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@mipmap/text_logo"/>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/hero_stats_card"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp"
        android:layout_weight="1"
        android:onClick="heroStats">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/hero_stats_img"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@mipmap/pumpkin_duke"/>
            <TextView
                android:id="@+id/hero_stats_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/hero_stats_img"
                android:layout_toLeftOf="@id/hero_stats_img"
                android:text="@string/hero_stats"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/hero_stats_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/hero_stats_textView"
                android:text="@string/hero_stats_description"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/evolution_card"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp"
        android:layout_weight="1"
        android:onClick="evolution">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/evolution_img"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@mipmap/evolved_pd"/>
            <TextView
                android:id="@+id/evolution_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/evolution_img"
                android:layout_toLeftOf="@id/evolution_img"
                android:text="@string/evolution"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/evolution_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/evolution_textView"
                android:text="@string/evolution_description"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>